# agx-core

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml
docs/: BUILD_DIARY.md  plans.md  status.md  test-plan.md
docs/blog/: agx-core-public-spinout-brief.md  agx-core-public-spinout-draft.md
examples/live2reels-first-slice/: README.md  packet-outline.md
examples/quickstart-patch/: README.md
skills/agx-orchestrator/: SKILL.md
skills/agx-orchestrator/references/: layered-routing.md
src/agx_core/: apply.py  bundle.py  cli.py  config.py  doctor.py  runner.py  storage.py  verify.py
src/agx_core/providers/: __init__.py  anthropic.py  base.py  openai_compatible.py
tests/: test_apply.py  test_config.py  test_doctor.py  test_runner.py  test_storage.py
